<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context="danielfranke.com.cst2335_androidlabs.WeatherForecast">

    <ImageView
        android:id="@+id/imageViewWeatherForecast"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/imageDescr"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewWeatherForecast"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/textViewCurrentTempCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/celsius"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/textViewCurrentTemp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMinTemp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxTemp" />

    <TextView
        android:id="@+id/textViewMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/textViewMaxTemp"
        app:layout_constraintStart_toStartOf="@+id/textViewMinTemp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherForecast" />

    <ProgressBar
        android:id="@+id/progressBarWeatherForecast"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinTemp" />
</android.support.constraint.ConstraintLayout>
